--- a/ShellExplained/ShellExplained.iOS/ShellExplained.iOS.csproj
+++ b/ShellExplained/ShellExplained.iOS/ShellExplained.iOS.csproj
@@ -148,7 +148,10 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Refit">
+      <Version>4.6.58</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
